# ProgMathsS3

./: .gitignore  CMakeLists.txt  README.md
libRationnel/: CMakeLists.txt  CMakeListsLIB.txt  RatioTest  main.cpp
libRationnel/doc/: CMakeLists.txt  Doxyfile-html.cmake
libRationnel/include/: Ratio.hpp
libRationnel/src/: Ratio.cpp
myExamples/: CMakeLists.txt
myExamples/src/: main.cpp
unitTests/: CMakeLists.txt
unitTests/src/: tests.cpp
